# AgentOS_Studio

./: .env.example  .gcloudignore  .gitignore  AGENT_OS_LIBRARY.md  AgentOS_Presentation_Updated.md  INSTALL.md  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: deploy.yml
agent_os/: __init__.py  __main__.py  _api.py  testing.py
agent_os/agents/: __init__.py  base.py  factory.py
agent_os/agents/defaults/: __init__.py  code_reviewer.yaml  data_analyst.yaml  deployer.yaml  developer.yaml  geo_export_agent.yaml  geo_index_agent.yaml  geo_loader_agent.yaml  gwdb_data_agent.yaml  merge_agent.yaml  researcher.yaml  summary_agent.yaml  support_agent.yaml
agent_os/cli/: __init__.py  __main__.py  app.py
agent_os/cli/DataAssist/: .env.example  DataAssist.py  README.md  requirements.txt
agent_os/cli/ExerciseTipAgent/: .gitignore  ExerciseTipAgent.py  README.md  requirements.txt
agent_os/cli/agents/: __init__.py  activated_agent.py  chat_agent.py
agent_os/cli/commands/: __init__.py  chat.py  create.py  deploy.py  export.py  info.py  list.py  run.py
agent_os/cli/core/: __init__.py  agent_activation.py  config_generator.py  conversation_manager.py  deployment_conversation.py  execution_engine.py  intent_parser.py  prompt_generator.py  tool_selector.py
agent_os/cli/ui/: __init__.py  formatters.py  prompts.py  startup.py  streaming.py
agent_os/cli/utils/: __init__.py  completions.py  error_handlers.py  session.py  tool_discovery.py  validation.py
agent_os/config/: __init__.py  loader.py  schemas.py
agent_os/memory/: __init__.py  base.py  episodic.py  long_term.py  manager.py  shared.py  short_term.py
agent_os/tools/: __init__.py  approval.py  base.py  decorators.py  global_registry.py  registry.py  schemas.py
agent_os/tools/configs/: __init__.py  executor.py  schema.py
agent_os/tools/configs/gcp/: _connections.yaml  alloydb.yaml  api_gateway.yaml  artifact_registry.yaml  bigquery.yaml  cloud_armor.yaml  cloud_build.yaml  cloud_cdn.yaml  cloud_dns.yaml  cloud_functions.yaml  cloud_logging.yaml  cloud_monitoring.yaml  cloud_nat.yaml  cloud_run.yaml  cloud_scheduler.yaml  (+15 more)
agent_os/tools/vector_adapters/: __init__.py  base.py  chroma.py  faiss.py  qdrant.py  weaviate.py
agent_os/utils/: circuit_breaker.py  cost_tracker.py  csv_sanitizer.py  errors.py  logging.py  metrics.py  rate_limiter.py  retry.py  shutdown.py  timeout.py  token_counter.py
agent_os/workflows/: __init__.py  builder.py  deployment.py  deployment_workflow.py  hitl.py  supervisor.py
backend/: .dockerignore  Dockerfile  Pallesantha_App_Architecture_Documentation.md  architecture_summary.json  main.py  requirements.txt  seed_gwdb_workflow.py
backend/core/: agent_manager.py  geo_api.py  gwdb_manager.py  memory_pool.py  project_manager.py  tool_manager.py  workflow_manager.py  workflow_templates.py
backend/db/: database.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/hooks/: useChat.ts  useProjectChat.ts
frontend/src/lib/: api.ts  models.ts  utils.ts
frontend/src/types/: index.ts
(+43 files in other folders)
