[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-os"
version = "0.1.0"
description = "Lightweight framework for building production-grade AI agents with minimal code"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Agent_OS Contributors"}
]
keywords = ["ai", "agents", "langchain", "langgraph", "mcp", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.9",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-core>=0.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "chromadb>=0.5",
    "langchain-chroma>=0.1",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
]

[project.scripts]
agent_os = "agent_os.cli.app:cli"

[project.optional-dependencies]
research = [
    "arxiv>=2.1",
    "wikipedia-api>=0.7",
    "PyPDF2>=3.0",
]
web = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]
search = [
    "tavily-python>=0.3",
    "ddgs>=1.0",
]
translate = [
    "langdetect>=1.0",
]
translate_googletrans = [
    "agent-os[translate]",
    "googletrans==4.0.0-rc1",
]
translate_deepl = [
    "agent-os[translate]",
    "deepl>=1.15",
]
translate_google_cloud = [
    "agent-os[translate]",
    "google-cloud-translate>=3.11",
]
vector_qdrant = [
    "qdrant-client>=1.7",
    "sentence-transformers>=2.2",
]
vector_weaviate = [
    "weaviate-client>=4.4",
]
vector_faiss = [
    "faiss-cpu>=1.7",
    "sentence-transformers>=2.2",
]
vector_all = [
    "agent-os[vector_qdrant,vector_weaviate,vector_faiss]"
]
data_core = [
    "pandas>=2.2.0",
    "polars>=0.20.0",
    "duckdb>=0.10.0",
]
data_formats = [
    "openpyxl>=3.1.0",
    "pyarrow>=15.0.0",
]
data_viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
data_io = [
    "httpx>=0.27.0",
    "gql>=3.5.0",
    "psutil>=5.9.0",
    "aiofiles>=24.1.0",
]
data_all = [
    "agent-os[data_core,data_formats,data_viz,data_io]"
]
geo = [
    "geopandas>=0.14",
    "shapely>=2.0",
    "rtree>=1.0",
    "pyproj>=3.6",
]
mcp = [
    "mcp>=1.0",
]
all = [
    "agent-os[research,web,search,translate,vector_all,data_all,geo,mcp]"
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.urls]
Homepage = "https://github.com/yourusername/agent-os"
Documentation = "https://github.com/yourusername/agent-os/blob/main/README.md"
Repository = "https://github.com/yourusername/agent-os"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_os*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
